Fixing orga-speakers duality

--- a/mardi-gras-2021/public/index.html
+++ b/mardi-gras-2021/public/index.html
@@ -365,27 +365,54 @@ if (!doNotTrack) {
 	<ul class="shuffle">
 		
 		<li>
-			<a class="visually-hidden" href="/mardi-gras-2021/speakers/cecile_freyd-foucault/">Cécile Freyd-Foucault</a>
-<a class="speaker" href="/mardi-gras-2021/speakers/cecile_freyd-foucault/">
-	<div role="presentation" class="speaker-img" style="background-image: url(./images/speakers/cecile_freyd-foucault.jpg);"></div>
-	<div class="info">
-		<div class="speaker-company">Talan Labs</div>
-		<strong class="speaker-name">Cécile Freyd-Foucault</strong>
-		<span class="speaker-country">France</span>
-	</div>
+			<a href="/mardi-gras-2021/speakers/cecile_freyd-foucault/">
+	<div class="photo" role="presentation" style="background-image: url('./images/speakers/cecile_freyd-foucault.jpg');"></div>
 </a>
+<div class="label">
+	<a href="/mardi-gras-2021/speakers/cecile_freyd-foucault/">
+		<h3>Cécile Freyd-Foucault</h3>
+		<h4>Talan Labs</h4>
+	</a>
+	<ul class="socials">
+		
+		<li>
+			<a class="social" rel="noreferrer" href="https://twitter.com/cecilefreydf" target="_blank">
+				<svg class="icon icon-twitter">
+	<use xlink:href="#twitter"/>
+</svg>twitter</a>
+		</li>
+		
+	</ul>
+</div>
 		</li>
 		
 		<li>
-			<a class="visually-hidden" href="/mardi-gras-2021/speakers/nicolas_bardoux/">Nicolas Bardoux</a>
-<a class="speaker" href="/mardi-gras-2021/speakers/nicolas_bardoux/">
-	<div role="presentation" class="speaker-img" style="background-image: url(./images/speakers/nicolas_bardoux.jpg);"></div>
-	<div class="info">
-		<div class="speaker-company">Zenika IT</div>
-		<strong class="speaker-name">Nicolas Bardoux</strong>
-		<span class="speaker-country">Paris, France</span>
-	</div>
+			<a href="/mardi-gras-2021/speakers/nicolas_bardoux/">
+	<div class="photo" role="presentation" style="background-image: url('./images/speakers/nicolas_bardoux.jpg');"></div>
 </a>
+<div class="label">
+	<a href="/mardi-gras-2021/speakers/nicolas_bardoux/">
+		<h3>Nicolas Bardoux</h3>
+		<h4>Zenika IT</h4>
+	</a>
+	<ul class="socials">
+		
+		<li>
+			<a class="social" rel="noreferrer" href="https://twitter.com/nicobrdx" target="_blank">
+				<svg class="icon icon-twitter">
+	<use xlink:href="#twitter"/>
+</svg>twitter</a>
+		</li>
+		
+		<li>
+			<a class="social" rel="noreferrer" href="https://github.com/nbrdx" target="_blank">
+				<svg class="icon icon-github">
+	<use xlink:href="#github"/>
+</svg>github</a>
+		</li>
+		
+	</ul>
+</div>
 		</li>
 		
 	</ul>
