Adding Noël to the Team

--- a/les-briques-du-web/public/team/index.html
+++ b/les-briques-du-web/public/team/index.html
@@ -391,6 +391,42 @@ if (!doNotTrack) {
 			
 		
 			
+			<li><a href="/les-briques-du-web/team/noel_mace/">
+	<div class="photo" role="presentation" style="background-image: url('./images/speakers/noel_mace.jpg');"></div>
+</a>
+<div class="label">
+	<a href="/les-briques-du-web/team/noel_mace/">
+		<h3>Noël Macé</h3>
+		<h4></h4>
+	</a>
+	<ul class="socials">
+		
+		<li>
+			<a class="social" rel="noreferrer" href="https://www.twitter.com/noel_mace" target="_blank">
+				<svg class="icon icon-twitter">
+	<use xlink:href="#twitter"/>
+</svg>twitter</a>
+		</li>
+		
+		<li>
+			<a class="social" rel="noreferrer" href="https://www.linkedin.com/in/noelmace/" target="_blank">
+				<svg class="icon icon-linkedin">
+	<use xlink:href="#linkedin"/>
+</svg>linkedin</a>
+		</li>
+		
+		<li>
+			<a class="social" rel="noreferrer" href="https://github.com/noelmace" target="_blank">
+				<svg class="icon icon-github">
+	<use xlink:href="#github"/>
+</svg>github</a>
+		</li>
+		
+	</ul>
+</div></li>
+			
+		
+			
 			<li><a href="/les-briques-du-web/team/stephanie_moallic/">
 	<div class="photo" role="presentation" style="background-image: url('./images/speakers/stephanie_moallic.jpg');"></div>
 </a>
