Adding Emmanuel Demey

--- a/les-briques-du-web/public/team/index.html
+++ b/les-briques-du-web/public/team/index.html
@@ -297,6 +297,42 @@ if (!doNotTrack) {
 	<ul class="members shuffle">
 		
 			
+			<li><a href="/les-briques-du-web/team/emmanuel_demey/">
+	<div class="photo" role="presentation" style="background-image: url('./images/speakers/emmanuel_demey.jpg');"></div>
+</a>
+<div class="label">
+	<a href="/les-briques-du-web/team/emmanuel_demey/">
+		<h3>Emmanuel Demey</h3>
+		<h4></h4>
+	</a>
+	<ul class="socials">
+		
+		<li>
+			<a class="social" rel="noreferrer" href="https://www.twitter.com/EmmanuelDemey" target="_blank">
+				<svg class="icon icon-twitter">
+	<use xlink:href="#twitter"/>
+</svg>twitter</a>
+		</li>
+		
+		<li>
+			<a class="social" rel="noreferrer" href="https://www.linkedin.com/in/emmanueldemey/" target="_blank">
+				<svg class="icon icon-linkedin">
+	<use xlink:href="#linkedin"/>
+</svg>linkedin</a>
+		</li>
+		
+		<li>
+			<a class="social" rel="noreferrer" href="https://github.com/EmmanuelDemey" target="_blank">
+				<svg class="icon icon-github">
+	<use xlink:href="#github"/>
+</svg>github</a>
+		</li>
+		
+	</ul>
+</div></li>
+			
+		
+			
 			<li><a href="/les-briques-du-web/team/horacio_gonzalez/">
 	<div class="photo" role="presentation" style="background-image: url('./images/team/horacio_gonzalez.jpg');"></div>
 </a>
