--- a/les-briques-du-web/public/team/index.html
+++ b/les-briques-du-web/public/team/index.html
@@ -369,6 +369,35 @@ if (!doNotTrack) {
 			
 		
 			
+			<li><a href="/les-briques-du-web/team/hubert_sablonniere/">
+	<div class="photo" role="presentation" style="background-image: url('./images/speakers/hubert_sablonniere.jpg');"></div>
+</a>
+<div class="label">
+	<a href="/les-briques-du-web/team/hubert_sablonniere/">
+		<h3>Hubert Sablonnière</h3>
+		<h4>Clever Cloud</h4>
+	</a>
+	<ul class="socials">
+		
+		<li>
+			<a class="social" rel="noreferrer" href="https://twitter.com/hsablonniere" target="_blank">
+				<svg class="icon icon-twitter">
+	<use xlink:href="#twitter"/>
+</svg>twitter</a>
+		</li>
+		
+		<li>
+			<a class="social" rel="noreferrer" href="https://github.com/hsablonniere" target="_blank">
+				<svg class="icon icon-github">
+	<use xlink:href="#github"/>
+</svg>github</a>
+		</li>
+		
+	</ul>
+</div></li>
+			
+		
+			
 			<li><a href="/les-briques-du-web/team/jf_garreau/">
 	<div class="photo" role="presentation" style="background-image: url('./images/speakers/jf_garreau.jpg');"></div>
 </a>
